2022-10-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Refactor to parallelize logic in
	similar routines; namely, those handling escape sequences that
	accept newlines as argument delimiters.

2022-10-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Fix inconsistencies in handling of
	escape sequences that accept newlines as delimiters.  Some threw
	spurious warnings as in Savannah #63011; others failed to treat
	a newline-terminated escape sequence also as the ending of an
	input line.
	(do_name_test, do_zero_width): Suppress spurious warning.
	(do_zero_width, do_width, do_special): Synthesize newline to
	terminate input line.

2022-10-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/\
	some_escapes_accept_newline_delimiters.sh: Add test cases for
	`\A` and test formatted output of escape sequences, not just the
	absence of diagnostics from permitted use of newlines as
	argument delimiters.

2022-09-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/libs/libdriver/input.cpp (do_file): Make use of
	positioning commands before the first page is started fatal
	errors; they suggest ill-formed input.  The 'p' command
	clobbers the vertical position anyway.  (See
	https://bugs.debian.org/421437 for discussion.)

2022-09-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/pdf.tmac: Add inclusion guard; if a `pdfmark` macro is
	already defined, skip inclusion of this file.  Unfortunately
	there are multiple name collisions with pdfmark.tmac.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp:
	* src/roff/troff/request.h: Trivially refactor.  Boolify
	`interpolate_macro` and `request::invoke`.  Also rename
	parameter `no_next` to `do_not_want_next_token`, exposing
	potentially confusing interface design.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>
