@@ -195,6 +195,7 @@ tmac_TESTS = \
   tmac/tests/e_ld-works.sh \
   tmac/tests/e_line-numbering-works.sh \
   tmac/tests/e_rejects-too-short-page-lengths.sh \
+  tmac/tests/latin9_works.sh \
   tmac/tests/localization-works.sh \
   tmac/tests/pdfpic_does-not-choke-on-bad-pdfinfo-output.sh \
   tmac/tests/pdfpic_falls-back-to-PSPIC.sh \
